# snapcast-pis

./: inventory.yml  playbook_base.yaml  playbook_clients.yaml  playbook_server.yaml  pyproject.toml  secrets.example.yml  wpa_supplicant.conf.j2
client/: Automation_Custom_Script.sh  dietpi-wifi.txt  dietpi.txt
server/: Automation_Custom_Script.sh  default_snapserver  dietpi.txt  snapserver.conf
