[tool.poetry]
name = "snapcast"
version = "0.1.0"
description = ""
authors = ["Ethan Skinner <etskinner@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ansible = "^10.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
